[package]
name = "builder"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.1.2", features = ["derive"] }
crossbeam = "0.8.1"
fn-error-context = "0.2.0"
log = "0.4.14"
memchr = "2.4.1"
notify = "5.0.0-pre.13"
once_cell = "1.9.0"
pretty_env_logger = "0.4.0"
pulldown-cmark = "0.9.1"
syntect = "4.6.0"
