[package]
name = "builder"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.1.2", features = ["derive"] }
crossbeam = "0.8.1"
fn-error-context = "0.2.0"
handlebars = "4.2.1"
hyper = { version = "0.14.17", features = ["server", "http1"], optional = true }
image = { version = "0.24.1", default-features = false, features = ["png", "ico"] }
log = "0.4.14"
memchr = "2.4.1"
notify = "5.0.0-pre.13"
once_cell = "1.9.0"
percent-encoding = { version = "2.1.0", optional = true }
pretty_env_logger = "0.4.0"
pulldown-cmark = "0.9.1"
serde = { version = "1.0.136", features = ["derive", "rc"] }
syntect = "4.6.0"
tokio = { version = "1.17.0", features = ["rt", "net"], optional = true }
tower-service = { version = "0.3.1", optional = true }

[features]
server = ["hyper", "percent-encoding", "tokio", "tower-service"]
