[package]
name = "builder"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.55"
atom_syndication = "0.12.1"
bumpalo = "3.12.0"
bytes = { version = "1.1.0", optional = true }
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"] }
crossbeam = "0.8.1"
fn-error-context = "0.2.0"
form_urlencoded = { version = "1.0.1", optional = true }
handlebars = "4.2.1"
hyper = { version = "0.14.17", features = ["server", "http1"], optional = true }
image = { version = "0.24.1", default-features = false, features = ["png", "ico"] }
log = "0.4.14"
notify = "5.1.0"
num-traits = "0.2.15"
once_cell = "1.9.0"
percent-encoding = { version = "2.1.0", optional = true }
pretty_env_logger = "0.4.0"
pulldown-cmark = "0.9.1"
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0.79"
syntect = "5.0.0"
tokio = { version = "1.17.0", features = ["rt", "net"], optional = true }
toml = "0.7.4"
tower-service = { version = "0.3.1", optional = true }
walkdir = "2.3.3"

[features]
server = ["bytes", "form_urlencoded", "hyper", "percent-encoding", "tokio", "tower-service"]
